[gd_scene load_steps=7 format=3 uid="uid://ciyljsx7vhph3"]

[ext_resource type="Script" path="res://classes/blimp/blimp.gd" id="1_ojgcs"]
[ext_resource type="PackedScene" uid="uid://c6fjhy8vkhtq0" path="res://scenes/blimp/helm_control.tscn" id="2_1f3a3"]
[ext_resource type="PackedScene" uid="uid://5naxk7gmda0b" path="res://scenes/blimp/steam_control.tscn" id="2_aunty"]
[ext_resource type="PackedScene" uid="uid://b4w3of8lypll6" path="res://scenes/blimp/air_control.tscn" id="4_tsjaa"]

[sub_resource type="BoxMesh" id="BoxMesh_4hie6"]
size = Vector3(1.991, 0.121, 2.833)

[sub_resource type="BoxShape3D" id="BoxShape3D_t5iye"]
size = Vector3(1.99744, 0.123779, 2.81311)

[node name="Blimp" type="StaticBody3D" node_paths=PackedStringArray("helm_control", "steam_control", "air_control")]
script = ExtResource("1_ojgcs")
helm_control = NodePath("HelmControl")
steam_control = NodePath("SteamControl")
air_control = NodePath("AirControl")

[node name="SteamControl" parent="." instance=ExtResource("2_aunty")]
transform = Transform3D(0.176415, 0, -0.0357477, 0, 0.18, 0, 0.0357477, 0, 0.176415, 0.674324, 0, 0.0828376)

[node name="HelmControl" parent="." instance=ExtResource("2_1f3a3")]
transform = Transform3D(0.179962, 0, 0, 0, 0.179962, 0, 0, 0, 0.179962, 0, 0, 0)

[node name="AirControl" parent="." instance=ExtResource("4_tsjaa")]
transform = Transform3D(-0.156413, 0, -0.0890788, 0, 0.18, 0, 0.0890788, 0, -0.156413, -0.82806, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0528758, 1.20912)
mesh = SubResource("BoxMesh_4hie6")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000183105, -0.0557861, 1.20321)
shape = SubResource("BoxShape3D_t5iye")
